# SPBU-homework-sem01

./: .gitignore  CMakeLists.txt  README.md  init_gtest.cpp  main.cpp  testing_main.cpp
problemset-01/: 02_div.cpp  (+9 more)
problemsets/TestWorks/BossFight/: CMakeLists.txt  bossFight-task01.cpp  bossFight-task01.h  bossFight-task02.cpp  bossFight-task03.cpp  notes.md
problemsets/TestWorks/BossFight/dataStructures/: BinarySearchTree.cpp  BinarySearchTree.h  DoublyLinkedList.cpp  LinkedList.cpp  LinkedList.h  PriorityQueue.cpp  PriorityQueue.h  UnorderedGraph.cpp  UnorderedGraph.h
problemsets/TestWorks/BossFight/tasks/: bossFight-task01.cpp  bossFight-task01.h  bossFight-task02.cpp  data.txt  output.txt
problemsets/TestWorks/BossFight/unitTests/: unitTest-task01.cpp  unitTest-task03.cpp
problemsets/TestWorks/testwork-2/: CMakeLists.txt  dataStructures.cpp  dataStructures.h  f.txt  g.txt  task01.cpp  task01.h  task02.cpp  task02.h  task03.cpp  task03.h
problemsets/TestWorks/testwork-2-3/: CMakeLists.txt  dataStructures.cpp  task02.cpp  task02.h
problemsets/TestWorks/testwork-2-3/unitTests/: unitTest-task02.cpp
problemsets/TestWorks/testwork-2-5/: CMakeLists.txt  List.cpp  List.h  Queue.cpp  Queue.h  calendar.txt  testwork-process-calendar.cpp  testwork-task01-requests.cpp  testwork-task01-requests.h  unitTest-process-calendar.cpp
problemsets/TestWorks/testwork-2/unitTests/: unitTest-task01.cpp  unitTest-task02.cpp  unitTest-task03.cpp
problemsets/problemset-02/: CMakeLists.txt  arrayHelpers.cpp  arrayHelpers.h  note.md  task-21-fibonacci.cpp  task-21-fibonacci.h  task-22-power.cpp  task-22-power.h  task-23-counting-bubbles.cpp  task-23-counting-bubbles.h  task-24-sort-rand-array.cpp  task-24-sort-rand-array.h
problemsets/problemset-02/tasks/: arrayHelpers.h  task-21-fibonacci.h  task-22-power.cpp  task-23-counting-bubbles.cpp  task-24-sort-rand-array.h
problemsets/problemset-02/utests/: utest-task-21.cpp  utest-task-22.cpp  utest-task-23.cpp  utest-task-24.cpp
problemsets/problemset-03/: CMakeLists.txt  note.md  task-31-quicksort.cpp  task-31-quicksort.h  task-32-quick-binary-search.cpp  task-32-quick-binary-search.h
problemsets/problemset-03/tasks/: task-31-quicksort.cpp  task-31-quicksort.h  task-32-quick-binary-search.cpp  task-32-quick-binary-search.h  task-33-most-frequent-element.cpp  task-33-most-frequent-element.h
problemsets/problemset-03/utests/: utest-task-31.cpp  utest-task-32.cpp  utest-task-33.cpp
problemsets/problemset-04/: CMakeLists.txt  task-41-twos-complement.cpp  task-41-twos-complement.h  task-43-phonebook.cpp
problemsets/problemset-04/tasks/: task-41-twos-complement.cpp  task-41-twos-complement.h  task-42-numbers-from-file.cpp  task-42-numbers-from-file.h  task-43-phonebook.cpp  task-43-phonebook.h
problemsets/problemset-04/tasks/task-41-bitwiseOperations/: bitwiseOperations.cpp  bitwiseOperations.h  task-41-bitwise-operations.cpp  task-41-bitwise-operations.h
problemsets/problemset-04/tasks/task-42-searchInFile/: data.txt  handleInput.h  mostFrequentElement.cpp  mostFrequentElement.h  quickSortAlgorithm.h
problemsets/problemset-04/testFixtures/: NumberFixture.cpp  NumberFixture.h
problemsets/problemset-04/utests/: utest-task-41.cpp  utest-task-42.cpp  utest-task-43.cpp
problemsets/problemset-05/: CMakeLists.txt  note.md  task-51-linked-list.cpp  task-51-linked-list.h
problemsets/problemset-05/tasks/: task-51-linked-list.cpp  task-51-linked-list.h  task-52-circular-linked-list.cpp  task-52-circular-linked-list.h
problemsets/problemset-05/tasks/JosephusProblem/: CircularLinkedList.cpp  CircularLinkedList.h  josephusProblem.cpp  task-52-circular-linked-list.cpp  task-52-circular-linked-list.h
problemsets/problemset-05/tasks/LinkedList/: task-51-linked-list.cpp  task-51-linked-list.h
problemsets/problemset-05/testFixture/: LinkedListFixture.cpp  LinkedListFixture.h
problemsets/problemset-05/testFixtures/: CircularListFixture.cpp  CircularListFixture.h  LinkedListFixture.cpp  LinkedListFixture.h
problemsets/problemset-05/utests/: utest-task-51.cpp  utest-task-52.cpp
problemsets/problemset-07/: CMakeLists.txt  note.md
problemsets/problemset-07/tasks/AbstractDataType-Set/: task-71-set.cpp
problemsets/problemset-07/utests/: utest-task-71.cpp  utest-task-72.cpp
source/problemset-04/: CMakeLists.txt  note.md
source/problemset-04/tasks/task-42-searchInFile/: handleInput.cpp  quickSortAlgorithm.cpp
source/problemset-04/tasks/task-43-phonebook/: phoneBook-data.txt  phoneBook-output.txt  task-43-phonebook.cpp  task-43-phonebook.h
source/problemset-04/utests/: utest-task-42.cpp  utest-task-43.cpp
source/problemset-06/: CMakeLists.txt
source/problemset-06/tasks/MergeSort/: DoublyLinkedList.cpp  DoublyLinkedList.h  List.cpp  List.h  data-by-name.txt  data-by-number.txt  data.txt  task-64-merge-sort.cpp  task-64-merge-sort.h
source/problemset-06/tasks/ReversePolishNotation/: task-61-postfix-notation.cpp  task-61-postfix-notation.h
source/problemset-06/utests/: utest-task-62.cpp  utest-task-63.cpp  utest-task-64.cpp
source/problemset-07/: CMakeLists.txt
source/problemset-07/unitTests/: utest-task-71.cpp  utest-task-72.cpp
source/problemset-07/utests/: utest-task-71.cpp
source/problemset-08/: CMakeLists.txt
source/problemset-08/utests/: utest-task-81.cpp
source/problemset-09/: CMakeLists.txt  note.md
source/problemset-09/unitTests/: utest-hashTable.cpp  utest-task-91.cpp
source/problemset-10/: CMakeLists.txt  DataInput.txt  dataInput.cpp  dataInput.h  dataOutput.cpp  dataOutput.h  graph.cpp  graph.h  note.md  task-10-graph-of-roads.cpp
source/problemset-10/Graph/: dataInput.cpp  dataInput.h  graph.cpp  task-10-graph-of-roads.cpp  task-10-graph-of-roads.h
source/problemset-10/unitTests/: utest-task-10.cpp
source/testworks/bossFight-01/: CMakeLists.txt  note.md
source/testworks/bossFight-02/: CMakeLists.txt  note.md
source/testworks/testwork-01-last/: CMakeLists.txt  task-01-isPalindrome.h
source/testworks/testwork-02-last/: CMakeLists.txt  Queue.cpp  Queue.h  testwork-task01-requests.h
(+154 files in other folders)
